feat: Desabilita botão 'editar tarefa' quando a tarefa está checked

--- a/TODOLIST/src/app/components/task/task.component.css
+++ b/TODOLIST/src/app/components/task/task.component.css
@@ -1,8 +1,9 @@
-input[type='checkbox'] {
-  accent-color: #28a745;
+input[type="checkbox"] {
+  /* accent-color: #28a745; */
   cursor: pointer;
 }
 
 .completed {
   text-decoration: line-through;
+  opacity: 0.2;
 }
