--- a/TODOLIST/src/app/components/task/task.component.html
+++ b/TODOLIST/src/app/components/task/task.component.html
@@ -7,6 +7,7 @@
         id="task"
         [checked]="task.checked"
         (change)="toggleTaskStatus(task)"
+        class="form-check-input me-1"
       />
 
       <div class="column mx-3">
@@ -16,14 +17,16 @@
         <span [ngClass]="{ completed: task.checked }" class="card-text">{{
           task.category
         }}</span>
-        <span><i class="bi bi-clock mx-2"></i></span>
+        <span [ngClass]="{ completed: task.checked }"
+          ><i class="bi bi-clock mx-2"></i
+        ></span>
         <span [ngClass]="{ completed: task.checked }">{{ task.time }}</span>
       </div>
     </div>
 
     <div class="d-flex gap-2">
       <!-- Botão de Editar -->
-      <button class="btn btn-success" (click)="editTask()">
+      <button [disabled]="isButtonDisabled" class="btn btn-success" (click)="editTask()">
         <i class="bi bi-pencil-fill"></i>
       </button>
 
@@ -51,7 +54,7 @@
       class="form-control mb-2 mx-5 w-50"
     />
     <input
-    [(ngModel)]="task.time"
+      [(ngModel)]="task.time"
       type="time"
       class="form-control mb-2 mx-5 w-50"
     />
