feat: Adiciona uma imagem qunado não há tarefas cadastradas

--- a/TODOLIST/src/app/components/list/list.component.html
+++ b/TODOLIST/src/app/components/list/list.component.html
@@ -9,11 +9,9 @@
 </div>
 
 <ng-template #noTasks>
-  <div class="container my-3">
-    <div class="card w-85 mb-3">
-      <div class="card-body text-center">
-        <p class="noTask text-uppercase">Nenhuma tarefa cadastrada</p>
-      </div>
-    </div>
+  <div class="my-3 text-center" >
+    <p class="text-uppercase fw-bold mb-2">Nenhuma tarefa cadastrada</p>
+
+    <img src="https://img.freepik.com/vetores-premium/conceito-de-procrastinacao-mulher-sentada-sem-se-concentrar-nas-tarefas-de-trabalho_1334819-35730.jpg" alt="Nenhuma tarefa cadastrada">
   </div>
 </ng-template>
