--- a/TODOLIST/src/app/components/header/header.component.html
+++ b/TODOLIST/src/app/components/header/header.component.html
@@ -1,20 +1,22 @@
-<header>
+<header class="p-2">
   <div class="container p-2 d-flex justify-content-between">
     <div class="column">
-      <h1>Tarefas de hoje</h1>
-      <h4>{{ currentHour }}</h4>
+      <h1>Minhas tarefas</h1>
+      <span class="hour">{{ currentHour }}</span>
 
-      <ng-container [ngSwitch]="date.getDay()">
-        <span *ngSwitchCase="0">Domingo</span>
-        <span *ngSwitchCase="1">Segunda-feira</span>
-        <span *ngSwitchCase="2">Terça-feira</span>
-        <span *ngSwitchCase="3">Quarta-feira</span>
-        <span *ngSwitchCase="4">Quinta-feira</span>
-        <span *ngSwitchCase="5">Sexta-feira</span>
-        <span *ngSwitchDefault>Sábado</span>
-      </ng-container>
+      <div>
+        <ng-container [ngSwitch]="date.getDay()">
+          <span *ngSwitchCase="0">Domingo</span>
+          <span *ngSwitchCase="1">Segunda-feira</span>
+          <span *ngSwitchCase="2">Terça-feira</span>
+          <span *ngSwitchCase="3">Quarta-feira</span>
+          <span *ngSwitchCase="4">Quinta-feira</span>
+          <span *ngSwitchCase="5">Sexta-feira</span>
+          <span *ngSwitchDefault>Sábado</span>
+        </ng-container>
 
-      <span>, {{ date | date : "dd 'de' MMMM" }}</span>
+        <span>, {{ date | date : "dd 'de' MMMM" }}</span>
+      </div>
     </div>
 
     <div class="d-flex justify-content-center align-items-center">
@@ -24,6 +26,7 @@
         data-bs-toggle="modal"
         data-bs-target="#modal"
       >
+        Adicionar Tarefa
         <i class="bi bi-plus-lg"></i>
       </button>
     </div>
