feat: Adiciona alguns estilos para manter o FooterComponent ao fim da página

--- a/TODOLIST/src/app/components/footer/footer.component.html
+++ b/TODOLIST/src/app/components/footer/footer.component.html
@@ -1,6 +1,9 @@
 <footer class="p-3">
-  <div class="container column text-center">
-    <p>Desenvolvido por: Gabryel Costa, Leticia Melo, Pedro Cardoso e Yasmin Silva</p>
-    <p style="margin: 0;">2024. Todos os direitos reservados.</p>
+  <div class="container footer-container">
+    <small>
+      Desenvolvido por: Gabryel Costa, Leticia Melo, Pedro Cardoso e Yasmin
+      Silva.
+    </small>
+    <small>&copy; 2024. Todos os direitos reservados.</small>
   </div>
 </footer>
