--- a/TODOLIST/src/app/components/footer/footer.component.css
+++ b/TODOLIST/src/app/components/footer/footer.component.css
@@ -1,6 +1,17 @@
 footer {
   width: 100%;
-  height: 100%;
   background-color: #222121;
   color: #fff;
+  margin-top: auto;
+  padding: 1rem 0;
+  position: absolute;
+  bottom: 0;
+}
+
+.footer-container {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  align-items: center;
+  text-align: center;
 }
