--- a/TODOLIST/src/styles.css
+++ b/TODOLIST/src/styles.css
@@ -1,4 +1,3 @@
-/* You can add global styles to this file, and also import other style files */
 *,
 *::before,
 *::after {
@@ -7,8 +6,21 @@
   box-sizing: border-box;
 }
 
+html,
 body {
   min-height: 100vh;
+}
+
+body {
   font-family: "Poppins", sans-serif;
   background-color: #fffafa;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  padding-bottom: 100px;
+}
+
+main {
+  padding: 1rem;
+  overflow: auto;
 }
