refactor: Atualiza a lógica para que a propriedade 'currentHour' mude automaticamente e atuliza os desenvolvedores creditados

--- a/TODOLIST/src/app/components/header/header.component.html
+++ b/TODOLIST/src/app/components/header/header.component.html
@@ -15,7 +15,7 @@
           <span *ngSwitchDefault>Sábado</span>
         </ng-container>
 
-        <span>, {{ date | date : "dd 'de' MMMM" }}</span>
+        <span>, {{ date | date : "dd 'de' MMMM 'de' yyyy" }}</span>
       </div>
     </div>
 
