--- a/TODOLIST/src/app/components/footer/footer.component.html
+++ b/TODOLIST/src/app/components/footer/footer.component.html
@@ -1,7 +1,7 @@
 <footer class="p-3">
   <div class="container footer-container">
     <small>
-      Desenvolvido por: Gabryel Costa, Leticia Melo, Pedro Cardoso e Yasmin
+      Desenvolvido por: Gabryel Costa, Leticia Melo, Pedro Cardoso, Vanessa Misiti e Yasmin
       Silva.
     </small>
     <small>&copy; 2024. Todos os direitos reservados.</small>
