--- a/TODOLIST/src/app/app.component.html
+++ b/TODOLIST/src/app/app.component.html
@@ -1,9 +1,9 @@
 <app-header />
 
 <main>
-  <app-list></app-list>
+  <app-list />
 
-  <app-modal-form></app-modal-form>
+  <app-modal-form />
 </main>
 
 <app-footer />
