--- a/TODOLIST/src/app/components/modal-form/modal-form.component.html
+++ b/TODOLIST/src/app/components/modal-form/modal-form.component.html
@@ -67,7 +67,7 @@
             type="button"
             class="btn btn-danger"
             data-bs-dismiss="modal"
-            (click)="cancelForm()"
+            (click)="clearForm()"
           >
             Cancelar
           </button>
