feat/adicionando lógica de criação, exibição e delete

--- a/TODOLIST/src/app/components/task/task.component.css
+++ b/TODOLIST/src/app/components/task/task.component.css
@@ -1,8 +1,12 @@
-input[type='checkbox'] {
-    accent-color: #28a745;
-    cursor: pointer;
-  }
-  
-  .completed {
-    text-decoration: line-through;
-  }
+input[type="checkbox"] {
+  accent-color: #28a745;
+  cursor: pointer;
+}
+
+.completed {
+  text-decoration: line-through;
+}
+
+.container-desc-task svg{
+    margin: 0 8px;
+}
