--- a/TODOLIST/src/app/components/task/task.component.html
+++ b/TODOLIST/src/app/components/task/task.component.html
@@ -3,25 +3,32 @@
         <div class="d-flex align-items-center">
             <input type="checkbox" name="taks" id="task" [checked]="task.checked" (change)="toggleTaskStatus(task)" />
 
-            <div class="column mx-3">
+            <div class="column mx-3 container-desc-task">
                 <h5 [ngClass]="{ completed: task.checked }" class="card-title">
                     {{ task.title }}
                 </h5>
                 <span [ngClass]="{ completed: task.checked }" class="card-text">{{
                     task.category
                     }}</span>
-                <span><i class="bi bi-clock mx-2"></i></span>
+                <span><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="black" class="bi bi-clock" viewBox="0 0 16 16">
+                    <path d="M8 3.5a.5.5 0 0 0-1 0V9a.5.5 0 0 0 .252.434l3.5 2a.5.5 0 0 0 .496-.868L8 8.71z"/>
+                    <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16m7-8A7 7 0 1 1 1 8a7 7 0 0 1 14 0"/>
+                  </svg></span>
                 <span [ngClass]="{ completed: task.checked }">{{ task.time }}</span>
             </div>
         </div>
 
         <div class="d-flex gap-2">
             <button class="btn btn-success" (click)="updateTask(task)">
-                <i class="bi bi-pencil-fill"></i>
+                <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="currentColor" class="bi bi-pencil-fill" viewBox="0 0 16 16">
+                    <path d="M12.854.146a.5.5 0 0 0-.707 0L10.5 1.793 14.207 5.5l1.647-1.646a.5.5 0 0 0 0-.708zm.646 6.061L9.793 2.5 3.293 9H3.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.207zm-7.468 7.468A.5.5 0 0 1 6 13.5V13h-.5a.5.5 0 0 1-.5-.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.5-.5V10h-.5a.5.5 0 0 1-.175-.032l-.179.178a.5.5 0 0 0-.11.168l-2 5a.5.5 0 0 0 .65.65l5-2a.5.5 0 0 0 .168-.11z"/>
+                  </svg>
             </button>
 
-            <button class="btn btn-danger" (click)="deleteTask(task.id)">
-                <i class="bi bi-trash3-fill"></i>
+            <button class="btn btn-danger" (click)="deleteTask()">
+                <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="currentColor" class="bi bi-trash-fill" viewBox="0 0 16 16">
+                    <path d="M2.5 1a1 1 0 0 0-1 1v1a1 1 0 0 0 1 1H3v9a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V4h.5a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H10a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1zm3 4a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5M8 5a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7A.5.5 0 0 1 8 5m3 .5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 1 0"/>
+                  </svg>
             </button>
         </div>
     </div>
